# SimpleDNN

./: .gitignore  CMakeLists.txt  README.md  config.json
src/: dlibnetwork.cpp  dlibnetwork.h  dnn.h  main.cpp  structures.h
